<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:layout_gravity="end"
        android:paddingBottom="12dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_info" />

    <Button
        android:id="@+id/btnDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_notes"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:layout_marginTop="10dp"/>
</LinearLayout>
