<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="?android:textColorPrimary"
    android:backgroundTint="?android:colorBackground"
    android:layout_margin="8dp"
    android:radius="12dp"
    android:elevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/dbItemText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/note_text"
            android:textSize="16sp"
            android:textColor="#333" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/edit"
            android:background="@android:color/transparent"
            android:tint="#FFA000"
            tools:ignore="UseAppTint" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/delete"
            android:background="@android:color/transparent"
            android:tint="#D32F2F"
            tools:ignore="UseAppTint" />
    </LinearLayout>
</androidx.cardview.widget.CardView>